--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dojo/cli-build-app",
   "version": "3.0.0-pre",
-  "description": "CLI command to build Dojo 2 applications",
+  "description": "CLI command to build Dojo applications",
   "engines": {
     "npm": ">=3.0.0"
   },
@@ -24,19 +24,21 @@
     "build:static:dev": "cpx \"{src,tests}/**/*.{d.ts,html,md,json,js,css}\" dist/dev",
     "build:static:release": "cpx \"src/**/*.{d.ts,json}\" dist/release",
     "build:cjs": "tsc",
-    "build": "npm-run-all -p build:** -s package",
+    "build": "npm-run-all -p build:** -s dojo-package",
     "clean": "rimraf dist coverage output test-app/output test-app/node_modules",
+    "dojo-package": "dojo-package",
+    "dojo-release": "dojo-release",
     "intern": "intern",
     "lint:tslint": "tslint -p .",
     "lint:prettier": "prettier -l \"{src,tests}/**/*.{ts,tsx}\"",
     "lint": "run-p lint:*",
-    "package": "dojo-package",
     "precommit": "lint-staged",
     "prettier": "prettier --write \"{src,tests}/**/*.{ts,tsx}\"",
+    "release": "run-s lint clean build \"dojo-release -- {@}\" --",
+    "serve": "http-server -p 9999 -c-1 --silent",
     "test:ci": "run-p --race serve test",
     "test:cypress": "cypress run",
     "test": "run-s lint build artifact:package artifact:install build intern artifact:build:* test:cypress",
-    "serve": "http-server -p 9999 -c-1 --silent",
     "uploadCoverage": "codecov --file=coverage/coverage.json",
     "watch:ts": "dojo-tsc-watcher -p tsconfig.json -- dojo-package",
     "watch": "run-p watch:ts \"build:static:** -- --watch\""
@@ -56,8 +58,8 @@
     "arrowParens": "always"
   },
   "devDependencies": {
-    "@dojo/cli": "^3.0.0-alpha.1",
-    "@dojo/scripts": "^3.0.0-alpha.6",
+    "@dojo/cli": "~3.0.0",
+    "@dojo/scripts": "~3.0.1",
     "@types/clean-webpack-plugin": "0.1.0",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
@@ -96,11 +98,11 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/framework": "^3.0.0-alpha.1",
-    "@dojo/webpack-contrib": "^3.0.0-alpha.2",
+    "@dojo/framework": "~3.0.0",
+    "@dojo/webpack-contrib": "~3.0.0",
     "@theintern/istanbul-loader": "1.0.0-beta.1",
     "auto-require-webpack-plugin": "1.0.1",
-    "chalk": "~2.4.0",
+    "chalk": "2.4.1",
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
