--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@dojo/cli": "~3.0.0",
     "@dojo/scripts": "~3.0.1",
     "@types/clean-webpack-plugin": "0.1.0",
+    "@types/copy-webpack-plugin": "4.4.1",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
     "@types/extract-text-webpack-plugin": "3.0.0",
@@ -103,6 +104,7 @@
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "0.1.17",
+    "copy-webpack-plugin": "4.5.2",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
     "express": "4.16.2",
