--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
     "typed-css-modules": "0.3.1",
-    "uglifyjs-webpack-plugin": "1.1.0",
+    "uglifyjs-webpack-plugin-terser": "1.1.0",
     "umd-compat-loader": "2.1.1",
     "webpack": "3.8.1",
     "webpack-bundle-analyzer-sunburst": "1.3.0",
