--- a/package.json
+++ b/package.json
@@ -106,13 +106,16 @@
     "clean-webpack-plugin": "0.1.17",
     "copy-webpack-plugin": "4.5.2",
     "cli-columns": "3.1.2",
+    "copy-webpack-plugin": "4.5.2",
     "css-loader": "0.28.7",
     "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
+    "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "identity-loader": "1.0.1",
     "imports-loader": "0.7.1",
     "json-css-module-loader": "1.0.2",
     "jsonfile": "4.0.0",
