--- a/package.json
+++ b/package.json
@@ -104,10 +104,10 @@
     "auto-require-webpack-plugin": "1.0.1",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "0.1.17",
-    "copy-webpack-plugin": "4.5.2",
     "cli-columns": "3.1.2",
     "copy-webpack-plugin": "4.5.2",
     "css-loader": "0.28.7",
+    "eventsource-polyfill": "^0.9.6",
     "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
@@ -130,7 +130,7 @@
     "postcss-loader": "2.0.8",
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
-    "strip-ansi": "4.0.0",
+    "strip-ansi": "3.0.1",
     "style-loader": "0.19.0",
     "ts-loader": "3.1.1",
     "tslint": "5.8.0",
