--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "cli-columns": "3.1.2",
     "copy-webpack-plugin": "4.5.2",
     "css-loader": "0.28.7",
-    "eventsource-polyfill": "^0.9.6",
+    "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
