--- a/package.json
+++ b/package.json
@@ -102,10 +102,11 @@
     "@dojo/framework": "~3.0.0",
     "@dojo/webpack-contrib": "~3.0.1",
     "auto-require-webpack-plugin": "1.0.1",
+    "brotli-webpack-plugin": "0.5.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
-    "copy-webpack-plugin": "4.5.2",
+    "compression-webpack-plugin": "1.1.7",
     "css-loader": "0.28.7",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
