--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "@types/log-update": "2.0.0",
     "@types/mockery": "1.4.29",
     "@types/node": "~9.6.5",
-    "@types/optimize-css-assets-webpack-plugin": "1.3.1",
     "@types/ora": "1.3.1",
     "@types/rimraf": "2.0.2",
     "@types/sinon": "~4.3.3",
@@ -83,7 +82,7 @@
     "@types/webpack": "3.8.1",
     "@types/webpack-chunk-hash": "0.4.0",
     "@types/webpack-manifest-plugin": "1.3.1",
-    "@types/yargs": "^10.0.0",
+    "@types/yargs": "10.0.0",
     "codecov": "~3.0.4",
     "cpx": "~1.5.0",
     "cypress": "^3.0.1",
@@ -123,7 +122,6 @@
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
     "postcss-cssnext": "3.1.0",
