--- a/package.json
+++ b/package.json
@@ -100,7 +100,6 @@
   "dependencies": {
     "@dojo/framework": "~3.0.0",
     "@dojo/webpack-contrib": "~3.0.1",
-    "auto-require-webpack-plugin": "1.0.1",
     "brotli-webpack-plugin": "0.5.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "0.1.17",
@@ -144,6 +143,7 @@
     "webpack-hot-middleware": "2.21.0",
     "webpack-manifest-plugin": "1.3.2",
     "webpack-mild-compile": "1.0.0",
-    "webpack-pwa-manifest": "3.6.2"
+    "webpack-pwa-manifest": "3.6.2",
+    "wrapper-webpack-plugin": "1.0.0"
   }
 }
