--- a/package.json
+++ b/package.json
@@ -120,9 +120,9 @@
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
-    "postcss-cssnext": "3.1.0",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.8",
+    "postcss-preset-env": "5.3.0",
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "4.0.0",
