--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "html-webpack-plugin": "3.2.0",
     "identity-loader": "1.0.1",
     "imports-loader": "0.7.1",
+    "istanbul-instrumenter-loader": "3.0.1",
     "json-css-module-loader": "1.0.2",
     "jsonfile": "4.0.0",
     "loader-utils": "1.1.0",
