--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
+    "postcss-color-function": "4.0.1",
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.8",
     "postcss-preset-env": "5.3.0",
