--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@dojo/cli": "~3.0.0",
     "@dojo/scripts": "~3.0.1",
     "@types/clean-webpack-plugin": "0.1.0",
+    "@types/connect-history-api-fallback": "^1.3.1",
     "@types/copy-webpack-plugin": "4.4.1",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
@@ -106,6 +107,7 @@
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
     "compression-webpack-plugin": "1.1.7",
+    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "0.28.7",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
