--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,6 +16,7 @@ test_script:
   - node --version
   - npm --version
   # run tests
+  - npm run lint
   - npm run test:ci
   - npm run uploadCoverage
 
