--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "serve": "http-server -p 9999 -c-1 --silent",
     "test:ci": "run-p --race serve test",
     "test:cypress": "cypress run",
-    "test": "run-s lint build artifact:package artifact:install build intern artifact:build:* test:cypress",
+    "test": "run-s build artifact:package artifact:install build intern artifact:build:* test:cypress",
     "uploadCoverage": "codecov --file=coverage/coverage.json",
     "watch:ts": "dojo-tsc-watcher -p tsconfig.json -- dojo-package",
     "watch": "run-p watch:ts \"build:static:** -- --watch\""
