--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "clean-webpack-plugin": "0.1.17",
     "cli-columns": "3.1.2",
     "css-loader": "0.28.7",
+    "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
@@ -127,7 +128,7 @@
     "postcss-preset-env": "5.3.0",
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
-    "strip-ansi": "4.0.0",
+    "strip-ansi": "3.0.1",
     "style-loader": "0.19.0",
     "ts-loader": "3.1.1",
     "tslint": "5.8.0",
