--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "postcss-import": "11.0.0",
     "postcss-loader": "2.0.8",
     "postcss-preset-env": "5.3.0",
+    "postcss-url": "^8.0.0",
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "3.0.1",
