--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "arrowParens": "always"
   },
   "devDependencies": {
-    "@dojo/cli": "~3.0.0",
+    "@dojo/cli": "^4.0.0",
     "@dojo/scripts": "~3.0.1",
     "@types/clean-webpack-plugin": "0.1.0",
     "@types/connect-history-api-fallback": "^1.3.1",
@@ -100,7 +100,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "next",
+    "@dojo/webpack-contrib": "^4.0.0",
     "brotli-webpack-plugin": "0.5.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "0.1.17",
