--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "serve": "http-server -p 9999 -c-1 --silent",
     "test:ci": "run-p --race serve test",
     "test:cypress": "cypress run",
+    "me": "npm-run-all -s build:cjs -s dojo-package -s you",
+	"you": "run-p --race serve test:cypress",
     "test": "run-s build artifact:package artifact:install build intern artifact:build:* test:cypress",
     "uploadCoverage": "codecov --file=coverage/coverage.json",
     "watch:ts": "dojo-tsc-watcher -p tsconfig.json -- dojo-package",
@@ -127,6 +129,7 @@
     "log-update": "2.3.0",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
+    "postcss-import": "^12.0.0",
     "postcss-loader": "2.0.8",
     "postcss-preset-env": "5.3.0",
     "slash": "1.0.0",
