--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "log-update": "2.3.0",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
-    "postcss-import": "^12.0.0",
+    "postcss-import": "12.0.0",
     "postcss-loader": "2.0.8",
     "postcss-preset-env": "5.3.0",
     "slash": "1.0.0",
