--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
+    "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
     "postcss-import": "12.0.0",
