--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "^4.0.0",
+    "@dojo/webpack-contrib": "next",
     "brotli-webpack-plugin": "0.5.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "0.1.17",
