--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "compression-webpack-plugin": "1.1.7",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "0.28.7",
+    "cssnano": "4.1.7",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
@@ -125,9 +126,10 @@
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
+    "optimize-css-assets-webpack-plugin": "3.1.1",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
+    "postcss-discard-duplicates": "4.0.2",
     "postcss-import": "12.0.0",
     "postcss-loader": "2.0.8",
     "postcss-preset-env": "5.3.0",
