--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "file://./dojo-webpack-contrib-5.0.0-alpha.3.tgz",
+    "@dojo/webpack-contrib": "next",
     "brotli-webpack-plugin": "1.0.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
