--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "cli-columns": "3.1.2",
     "compression-webpack-plugin": "2.0.0",
     "connect-history-api-fallback": "1.5.0",
+    "connect-inject": "0.4.0",
     "css-loader": "1.0.1",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
