--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/clean-webpack-plugin": "0.1.2",
     "@types/connect-history-api-fallback": "1.3.1",
     "@types/copy-webpack-plugin": "4.4.1",
+    "@types/cssnano": "4.0.0",
     "@types/execa": "0.8.0",
     "@types/express": "4.11.0",
     "@types/globby": "6.1.0",
@@ -109,6 +110,7 @@
     "connect-history-api-fallback": "1.5.0",
     "connect-inject": "0.4.0",
     "css-loader": "1.0.1",
+    "cssnano": "4.1.7",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
     "express-static-gzip": "1.1.3",
