--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
     "express-static-gzip": "1.1.3",
+    "extra-watch-webpack-plugin": "^1.0.3",
     "file-loader": "2.0.0",
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
