--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@types/yargs": "10.0.0",
     "codecov": "~3.0.4",
     "cpx": "~1.5.0",
-    "cypress": "^3.0.1",
+    "cypress": "3.0.1",
     "execa": "0.8.0",
     "http-server": "^0.11.1",
     "husky": "^0.14.3",
