--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   },
   "dependencies": {
     "@dojo/webpack-contrib": "^5.0.0",
+    "ajv": "6.6.2",
     "brotli-webpack-plugin": "1.0.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
@@ -126,7 +127,6 @@
     "istanbul-instrumenter-loader": "3.0.1",
     "json-css-module-loader": "1.0.2",
     "jsonfile": "4.0.0",
-    "jsonschema": "1.2.4",
     "loader-utils": "1.1.0",
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
