--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "arrowParens": "always"
   },
   "devDependencies": {
-    "@dojo/cli": "^4.0.0",
-    "@dojo/scripts": "~3.0.1",
+    "@dojo/cli": "^5.0.0",
+    "@dojo/scripts": "~3.1.0",
     "@types/clean-webpack-plugin": "0.1.2",
     "@types/connect-history-api-fallback": "1.3.1",
     "@types/copy-webpack-plugin": "4.4.1",
@@ -101,7 +101,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "next",
+    "@dojo/webpack-contrib": "^5.0.0",
     "brotli-webpack-plugin": "1.0.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
