--- a/package.json
+++ b/package.json
@@ -141,6 +141,8 @@
     "slash": "1.0.0",
     "source-map-loader-cli": "0.0.1",
     "strip-ansi": "3.0.1",
+    "stylelint": "9.10.1",
+    "stylelint-webpack-plugin": "0.10.5",
     "terser-webpack-plugin": "1.1.0",
     "ts-loader": "5.3.0",
     "ts-node": "7.0.1",
