--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@dojo/cli": "^5.0.0",
     "@dojo/scripts": "~3.1.0",
     "@types/clean-webpack-plugin": "0.1.2",
+    "@types/compression": "0.0.36",
     "@types/connect-history-api-fallback": "1.3.1",
     "@types/copy-webpack-plugin": "4.4.1",
     "@types/cssnano": "4.0.0",
@@ -106,6 +107,7 @@
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
     "cli-columns": "3.1.2",
+    "compression": "1.7.4",
     "compression-webpack-plugin": "2.0.0",
     "connect-history-api-fallback": "1.5.0",
     "connect-inject": "0.4.0",
