--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@types/log-symbols": "2.0.0",
     "@types/log-update": "2.0.0",
     "@types/mini-css-extract-plugin": "0.2.0",
+    "@types/minimatch": "3.0.3",
     "@types/mockery": "1.4.29",
     "@types/node": "~9.6.5",
     "@types/ora": "1.3.1",
@@ -132,6 +133,7 @@
     "log-symbols": "2.1.0",
     "log-update": "2.3.0",
     "mini-css-extract-plugin": "0.4.2",
+    "minimatch": "3.0.4",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "ora": "1.3.0",
     "pkg-dir": "2.0.0",
