--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "precommit": "lint-staged",
     "prettier": "prettier --write \"{src,tests}/**/*.{ts,tsx}\"",
     "release": "run-s lint clean build \"dojo-release -- {@}\" --",
-    "serve": "http-server -p 9999 -c-1 --silent",
+    "serve": "serve -p 9999",
     "test:ci": "run-p --race serve test",
     "test:cypress": "cypress run",
     "test": "run-s build artifact:package artifact:install build intern artifact:build:* test:cypress",
@@ -88,20 +88,20 @@
     "@types/yargs": "10.0.0",
     "codecov": "~3.0.4",
     "cpx": "~1.5.0",
-    "cypress": "3.0.1",
+    "cypress": "3.0.2",
     "execa": "0.8.0",
-    "http-server": "^0.11.1",
     "husky": "^0.14.3",
     "lint-staged": "6.0.0",
     "mockery": "2.1.0",
     "npm-run-all": "~4.1.3",
     "rimraf": "2.6.2",
+    "serve": "11.0.0",
     "shelljs": "0.7.8",
     "shx": "0.2.2",
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "^5.0.0",
+    "@dojo/webpack-contrib": "^5.0.2",
     "brotli-webpack-plugin": "1.0.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
