--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "^5.0.2",
+    "@dojo/webpack-contrib": "6.0.0-alpha.2",
     "brotli-webpack-plugin": "1.0.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
