--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "devDependencies": {
     "@dojo/cli": "^5.0.0",
-    "@dojo/scripts": "~3.1.0",
+    "@dojo/scripts": "~4.0.0",
     "@types/clean-webpack-plugin": "0.1.2",
     "@types/compression": "0.0.36",
     "@types/connect-history-api-fallback": "1.3.1",
@@ -72,6 +72,7 @@
     "@types/gzip-size": "4.0.0",
     "@types/html-webpack-plugin": "3.2.0",
     "@types/http-proxy-middleware": "^0.17.5",
+    "@types/jquery": "3.3.29",
     "@types/jsonfile": "4.0.1",
     "@types/loader-utils": "1.1.3",
     "@types/log-symbols": "2.0.0",
@@ -85,7 +86,7 @@
     "@types/sinon": "~4.3.3",
     "@types/strip-ansi": "3.0.0",
     "@types/tapable": "1.0.4",
-    "@types/webpack": "4.4.19",
+    "@types/webpack": "4.4.32",
     "@types/webpack-chunk-hash": "0.4.2",
     "@types/webpack-manifest-plugin": "1.3.2",
     "@types/yargs": "10.0.0",
@@ -104,7 +105,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "6.0.0-alpha.2",
+    "@dojo/webpack-contrib": "6.0.0-alpha.3",
     "brotli-webpack-plugin": "1.0.0",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
