--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/webpack-chunk-hash": "0.4.2",
     "@types/webpack-manifest-plugin": "1.3.2",
     "@types/yargs": "10.0.0",
+    "caniuse-lite": "1.0.30000973",
     "codecov": "~3.0.4",
     "cpx": "~1.5.0",
     "cypress": "3.0.2",
