--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
   "dependencies": {
     "@dojo/webpack-contrib": "6.0.0-alpha.2",
     "brotli-webpack-plugin": "1.0.0",
+    "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
     "cli-columns": "3.1.2",
