--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   "dependencies": {
     "@dojo/webpack-contrib": "^5.0.2",
     "brotli-webpack-plugin": "1.0.0",
+    "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
     "clean-webpack-plugin": "1.0.0",
     "cli-columns": "3.1.2",
