--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "4.0.0-beta.8",
     "http-proxy-middleware": "^0.19.0",
     "identity-loader": "1.0.1",
     "imports-loader": "0.8.0",
