--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "url": "https://github.com/dojo/cli-build-app.git"
   },
   "scripts": {
-    "artifact:build:pwa": "cd test-app && shx cp -f .dojorc-pwa .dojorc && npm run build:dist:evergreen && shx mv output/dist output/dist-pwa-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-pwa-evergreen && npm run build:dist && shx mv output/dist output/dist-pwa && npm run build:dev && shx mv output/dev output/dev-pwa",
-    "artifact:build:app": "cd test-app && shx cp -f .dojorc-app .dojorc && npm run build:dist:evergreen && shx mv output/dist output/dist-app-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-app-evergreen && npm run build:dist && shx mv output/dist output/dist-app && npm run build:dev && shx mv output/dev output/dev-app",
+    "artifact:build:pwa": "cd test-app && npm run build:dist:pwa:evergreen && shx mv output/dist output/dist-pwa-evergreen && npm run build:dev:pwa:evergreen && shx mv output/dev output/dev-pwa-evergreen && npm run build:dist:pwa && shx mv output/dist output/dist-pwa && npm run build:dev:pwa && shx mv output/dev output/dev-pwa",
+    "artifact:build:app": "cd test-app && npm run build:dist:evergreen && shx mv output/dist output/dist-app-evergreen && npm run build:dev:evergreen && shx mv output/dev output/dev-app-evergreen && npm run build:dist && shx mv output/dist output/dist-app && npm run build:dev && shx mv output/dev output/dev-app",
     "artifact:install": "cd test-app && shx rm -rf node_modules && npm i && npm run install-build-app",
     "artifact:package": "cd dist && npm pack -q ./release && shx mv dojo-cli-build-app-* dojo-cli-build-app.tgz && cd ..",
     "build:static:dev": "cpx \"{src,tests}/**/*.{d.ts,html,md,json,js,css}\" dist/dev",
@@ -105,7 +105,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "6.0.0-alpha.11",
+    "@dojo/webpack-contrib": "/Users/anthonygubler/development/dojo/cli-build-app/dojo-webpack-contrib-6.0.0-alpha.11.tgz",
     "brotli-webpack-plugin": "1.0.0",
     "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
@@ -124,7 +124,7 @@
     "globby": "7.1.1",
     "gzip-size": "4.1.0",
     "html-loader": "0.5.5",
-    "html-webpack-plugin": "4.0.0-beta.8",
+    "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.19.0",
     "identity-loader": "1.0.1",
     "imports-loader": "0.8.0",
