--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "sinon": "~4.5.0"
   },
   "dependencies": {
-    "@dojo/webpack-contrib": "/Users/anthonygubler/development/dojo/cli-build-app/dojo-webpack-contrib-6.0.0-alpha.11.tgz",
+    "@dojo/webpack-contrib": "./dojo-webpack-contrib-6.0.0-alpha.11.tgz",
     "brotli-webpack-plugin": "1.0.0",
     "caniuse-lite": "1.0.30000973",
     "chalk": "2.4.1",
