--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dojo/cli-build-app",
-  "version": "6.0.6-pre",
+  "version": "7.0.0-alpha.1",
   "description": "CLI command to build Dojo applications",
   "engines": {
     "npm": ">=3.0.0"
